# Project-Cerberus

./: .clang-format  .gitignore  CONTRIBUTING.md  Cerberus.cmake  LICENSE.txt  NOTICE.txt  README.md  uncrustify.cfg
cmake/: Acvpparser.cmake  AllFeatures.cmake  Coverage.cmake  FreeRTOS.cmake  Mbedtls.cmake  Sanitizers.cmake
cmake/toolchain/: Clang.cmake  ClangRiscV32.cmake  Gcc.cmake  GccArmCortexM3.cmake  GccArmCortexM33.cmake  GccArmCortexM4.cmake  GccArmCortexM7.cmake  GccArmNoneEabi.cmake  GccRiscV32.cmake  GccRiscV64UnknownElf.cmake  ToolchainDefaults.cmake
core/: platform_api.h  platform_io_api.h
core/acvp/: README.md  acvp_logging.h  acvp_override.h  acvp_proto.c  acvp_proto.h  acvp_proto_interface.h  acvp_proto_static.h  acvp_proto_tester.h  acvp_proto_tester_adapter.c  acvp_proto_tester_adapter.h  acvp_proto_tester_adapter_static.h  backend_aead.c  backend_aead.h  backend_ecdh.c  backend_ecdh.h  backend_ecdsa.c  backend_ecdsa.h  backend_hkdf.c  backend_hkdf.h  backend_hmac.c  backend_hmac.h  backend_rsa.c  backend_rsa.h  backend_sha.c  backend_sha.h  backend_sym.c  backend_sym.h  external_frontend_header.h
core/asn1/: asn1_oid.c  asn1_oid.h  asn1_util.c  asn1_util.h  base64.h  base64_core.c  base64_core.h  base64_core_static.h  base64_mbedtls.c  base64_mbedtls.h  base64_mbedtls_static.h  base64_thread_safe.c  base64_thread_safe.h  base64_thread_safe_static.h  ecc_der_util.c  ecc_der_util.h  x509.h  x509_cert_build.c  x509_cert_build.h  x509_cert_build_static.h  x509_extension_builder.c  x509_extension_builder.h  x509_extension_builder_eku.c  x509_extension_builder_eku.h  x509_extension_builder_eku_static.h  x509_extension_builder_mbedtls_eku.c  x509_extension_builder_mbedtls_eku.h  x509_extension_builder_mbedtls_eku_static.h  x509_mbedtls.c  x509_mbedtls.h  x509_mbedtls_static.h  x509_oid.c  x509_oid.h  x509_thread_safe.c  x509_thread_safe.h  x509_thread_safe_static.h
core/attestation/: attestation.h  attestation_discover.h  attestation_logging.h  attestation_master.c  attestation_master.h  attestation_requester.c  attestation_requester.h  attestation_requester_handler.c  attestation_requester_handler.h  attestation_requester_handler_static.h  attestation_requester_static.h  attestation_responder.c  attestation_responder.h  attestation_slave.c  attestation_slave.h  aux_attestation.c  aux_attestation.h  pcr.c  pcr.h  pcr_data.h  pcr_store.c  pcr_store.h
core/cmd_interface/: attestation_cmd_interface.h  authorized_execution_config_reset.c  authorized_execution_config_reset.h  authorized_execution_config_reset_static.h  cerberus_protocol.h  cerberus_protocol_debug_commands.c  cerberus_protocol_debug_commands.h  cerberus_protocol_diagnostic_commands.c  cerberus_protocol_diagnostic_commands.h  cerberus_protocol_master_commands.c  cerberus_protocol_master_commands.h  cerberus_protocol_observer.h  cerberus_protocol_optional_commands.c  cerberus_protocol_optional_commands.h  cerberus_protocol_required_commands.c  cerberus_protocol_required_commands.h  cmd_authorization.c  cmd_authorization.h  cmd_authorization_static.h  cmd_background.h  cmd_background_handler.c  cmd_background_handler.h  cmd_background_handler_static.h  cmd_channel.c  cmd_channel.h  cmd_channel_handler.c  cmd_channel_handler.h  cmd_channel_handler_static.h  cmd_channel_static.h  cmd_device.h  cmd_interface.c  cmd_interface.h  cmd_interface_ac_rot.c  cmd_interface_ac_rot.h  cmd_interface_ac_rot_static.h  cmd_interface_dual_cmd_set.c  cmd_interface_dual_cmd_set.h  cmd_interface_dual_cmd_set_static.h  cmd_interface_multi_handler.c  cmd_interface_multi_handler.h  (+36 more)
core/common/: array_size.h  auth_token.c  auth_token.h  auth_token_static.h  authorization.h  authorization_allowed.c  authorization_allowed.h  authorization_allowed_static.h  authorization_challenge.c  authorization_challenge.h  authorization_challenge_static.h  authorization_disallowed.c  authorization_disallowed.h  authorization_disallowed_static.h  authorization_global.c  authorization_global.h  authorization_global_static.h  authorized_data.h  authorized_data_token_only.c  authorized_data_token_only.h  authorized_data_token_only_static.h  authorized_data_with_aad.c  authorized_data_with_aad.h  authorized_data_with_aad_static.h  authorized_execution.c  authorized_execution.h  authorizing_signature.h  buffer_util.c  buffer_util.h  certificate.h  clock_utils.h  common_math.c  common_math.h  image_header.c  image_header.h  mmio_util.c  mmio_util.h  observable.c  observable.h  signature_verification.h  (+2 more)
core/crypto/: aes.h  aes_cbc.h  aes_cbc_mbedtls.c  aes_cbc_mbedtls.h  aes_cbc_mbedtls_static.h  aes_ecb.h  ecc.h  (+102 more)
projects/linux/testing/: CMakeLists.txt  aes_openssl_test.c  base64_openssl_test.c  ecc_openssl_test.c  hash_openssl_test.c  linux_all_tests.h  platform_CuTest.h  platform_aes_testing.h  platform_base64_testing.h  platform_ecc_testing.h  platform_hash_testing.h  platform_rng_testing.h  platform_rsa_testing.h  platform_x509_testing.h  rng_openssl_test.c  rsa_openssl_test.c  x509_openssl_test.c
projects/linux/testing/asn1/: base64_openssl_test.c  linux_asn1_all_tests.h  x509_openssl_test.c
projects/linux/testing/asn1/dice/: x509_extension_builder_openssl_dice_tcbinfo_test.c  x509_extension_builder_openssl_dice_ueid_test.c
projects/linux/testing/asn1/dme/: x509_extension_builder_openssl_dme_test.c
projects/linux/testing/config/: platform_all_tests.h
projects/linux/testing/crypto/: aes_cbc_openssl_test.c  aes_ecb_openssl_test.c  aes_gcm_openssl_test.c  aes_openssl_test.c  aes_xts_openssl_test.c  base64_openssl_test.c  ecc_openssl_test.c  hash_openssl_test.c  linux_crypto_all_tests.h  rng_openssl_test.c  rsa_openssl_test.c  x509_openssl_test.c
projects/linux/testing/system/: linux_system_all_tests.h  real_time_clock_linux_tests.c
testing/: all_tests.h  mock.c  mock.h  testing.c  testing.h
tools/: cerberus_spdm_compliance_check_tool.sh  sanitizers-ignorelist.txt  spdm_measurements_to_cfm.py  uncrustify_exclude_list.txt  uncrustify_format.sh  uncrustify_readme.md
tools/testing/unseal/: CMakeLists.txt  run_unseal.sh  unseal.c
(+1999 files in other folders)
